Snapshot 3c7578577d

* Fix the shell service (marco)

Snapshot fa55b5af09

* Changed default spacing to 15px (from 8px) (benzea)
* Correct the height of the primary palette (benzea)
* Use double leading underscores for callback names to avoid name collisions (erikos)
 
Snapshot 34e2271833

* Activity launching fixes (marco)

Snapshot 6d2828e54e

* Code cleanups (marco)

Snapshot 1eb9932ab3

* sugar.presence tracking handles of buddies (morgs)
* Cleanup activity destruction (marco)
* Added TimeoutAlert (erikos)

Snapshot 29bc0a8a20

* Register to the school server from XO palette (marco)

Snapshot 05668dfad7

* First implementation of the alert bar #2822 and hooked it up 
  to the activity window (erikos)

Snapshot 9c5755d85a

* Put toolbars into event boxes so X fills the background correctly (benzea)

Snapshot 6c7c6a503b

* Activity launching refactoring. (marco)
* Improved logs. (marco)

Snapshot 143f9ac9c6

* Save activity previews to the datastore as binary png images. (tomeu)

Snapshot acca55e861

* #3905 Wait 3 seconds, rather than 3000, if NetworkManager doesn't respond
  (smcv)
* #3909 Cope with both dbus-python both before and after 0.82.2 (smcv)
* #3181 Show always myself in friendstray (erikos)
* #948 Fix passphrase encoding for some passphrases. (bertf)
* #948 Accept ascii passphrases for WEP networks. '$:1a2b3c4d' for hex keys,
  's:my passphrase' for 5 or 13 characters ascii passphrases, or just the plain
  key for ascii passphrases of any other length. (tomeu)
* #2477 Support dbus introspection in sugar-native-factory (bertf)
* #2674 Add arrows to hint about the frame corner activation (marco)
* #2665 Re-arrange device icons in a line at the bottom (marco)
* #3378 Support changes in activity scope (incomplete!) (smcv, marco)
* #3081, #3497, #3485 Fix palette sizing and widget placement (benzea)
* #2211 New XRestop interface style in Developer Console (edsiper)

Snapshot b8ce5083b7

* #3601 Always remove invites from the frame. (cassidy)
