@@ -29,7 +29,6 @@ from sugar.graphics.xocolor import XoColor
 from sugar.graphics.roundbox import CanvasRoundBox
 from sugar.datastore import datastore
 from sugar import activity
-from sugar.objects import objecttype
 
 # TODO: Activities should request the Journal to open objectchooser dialogs. In
 # that way, we'll be able to reuse most of this code inside the Journal.
