@@ -1,5 +1,0 @@
-sugardir = $(pythondir)/sugar/objects
-sugar_PYTHON =		\
-	__init__.py	\
-	objecttype.py
-
