@@ -1,3 +1,5 @@
+* Fix the object chooser (marco)
+
 Snapshot 3c7578577d
 
 * Fix the shell service (marco)
